# packages/ecommerce-server/src/routes/routes.ts
@@ -15,8 +15,10 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"double","required":true},
             "username": {"dataType":"string","required":true},
             "platform": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Woocommerce"]},{"dataType":"enum","enums":["Magento"]}],"required":true},
-            "clientKey": {"dataType":"string","required":true},
-            "clientSecret": {"dataType":"string","required":true},
+            "baseUrl": {"dataType":"string","required":true},
+            "apiKey": {"dataType":"string","required":true},
+            "consumerKey": {"dataType":"string","required":true},
+            "consumerSecret": {"dataType":"string","required":true},
             "isActive": {"dataType":"boolean","required":true},
         },
         "additionalProperties": false,
@@ -27,8 +29,10 @@ const models: TsoaRoute.Models = {
         "properties": {
             "username": {"dataType":"string","required":true},
             "platform": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["Woocommerce"]},{"dataType":"enum","enums":["Magento"]}],"required":true},
-            "clientKey": {"dataType":"string","required":true},
-            "clientSecret": {"dataType":"string","required":true},
+            "consumerKey": {"dataType":"string","required":true},
+            "consumerSecret": {"dataType":"string","required":true},
+            "baseUrl": {"dataType":"string","required":true},
+            "apiKey": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
